@@ -12,10 +12,13 @@ What's New in Python 3.0 release candidate 1
 Core and Builtins
 -----------------
 
-- Issue 3774: Added a few more checks in PyTokenizer_FindEncoding to handle
+- Issue #3660: Corrected a reference leak in str.encode() when the encoder
+  does not return a bytes object.
+
+- Issue #3774: Added a few more checks in PyTokenizer_FindEncoding to handle
   error conditions.
 
-- Issue 3594: Fix Parser/tokenizer.c:fp_setreadl() to open the file being
+- Issue #3594: Fix Parser/tokenizer.c:fp_setreadl() to open the file being
   tokenized by either a file path or file pointer for the benefit of
   PyTokenizer_FindEncoding().
 
